--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MemoryGame</string>
+    <string name="app_name">Memory Game App</string>
     <string name="title_activity_game">GameActivity</string>
 </resources>
