main activity: new design and warning fixed select images: warning fixed

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -46,6 +46,8 @@
     <string name="about_text">קצת על העמותה</string>
     <string name="save_back_btn">חזרה</string>
 
+    <string name="score_board">לוח תוצאות</string>
+
 
 
 </resources>
