--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,10 @@
     <string name="about_text">About us</string>
     <string name="save_back_btn">Back</string>
 
+    <string name="score_board">Score Board</string>
+    <string name="score_zero" translatable="false">00:00:00</string>
+
+
+
 
 </resources>
