--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
 
     <string name="score_board">Score Board</string>
     <string name="score_zero" translatable="false">00:00:00</string>
+    <string name="content_Desc" translatable="false"></string>
 
 
 
