--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="score_title"> Best Score List</string>
     <string name="play_game">Play Game</string>
     <string name="select_imgs">Select photos</string>
-    <string name="reset_imgs">Reset Photos</string>
-    <string name="reset_score">Reset Scores</string>
+    <string name="reset_imgs">Reset \n Photos</string>
+    <string name="reset_score">Reset \n Scores</string>
     <string name="score1">Best #1</string>
     <string name="score2">Best #2</string>
     <string name="score3">Best #3</string>
@@ -39,8 +39,7 @@
     <string name="score_board">Score Board</string>
     <string name="score_zero" translatable="false">00:00:00</string>
     <string name="content_Desc" translatable="false"></string>
-
-
+    <string name="title_activity_first">FirstActivity</string>
 
 
 </resources>
